--- a/.github/actions/analytics-uploader-wrapper/action.yaml
+++ b/.github/actions/analytics-uploader-wrapper/action.yaml
@@ -39,7 +39,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to prod
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk
         token: ${{ inputs.token-prod }}
@@ -52,7 +52,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to staging
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-staging-org
         token: ${{ inputs.token-staging }}
@@ -67,7 +67,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev }}
@@ -83,7 +83,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev2
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev2 }}
@@ -99,7 +99,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev3
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev3 }}
@@ -115,7 +115,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev4
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev4 }}
@@ -131,7 +131,7 @@ runs:
     - name: Upload test results with default CLI version to prod
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk
         token: ${{ inputs.token-prod }}
@@ -143,7 +143,7 @@ runs:
     - name: Upload test results with default CLI version to staging
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-staging-org
         token: ${{ inputs.token-staging }}
@@ -157,7 +157,7 @@ runs:
     - name: Upload test results with default CLI version to dev
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev }}
@@ -172,7 +172,7 @@ runs:
     - name: Upload test results with default CLI version to dev2
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev2 }}
@@ -187,7 +187,7 @@ runs:
     - name: Upload test results with default CLI version to dev3
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev3 }}
@@ -202,7 +202,7 @@ runs:
     # Do not continue-on-error for last upload
     - name: Upload test results with default CLI version to dev4
       if: "${{ inputs.cli-version == '' }}"
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gnalh-patch-2
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev4 }}
