--- a/.github/actions/analytics-uploader-wrapper/action.yaml
+++ b/.github/actions/analytics-uploader-wrapper/action.yaml
@@ -36,23 +36,8 @@ inputs:
 runs:
   using: composite
   steps:
-    - name: Upload test results with CLI version ${{ inputs.cli-version }} to prod
-      if: "${{ inputs.cli-version != '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk
-        token: ${{ inputs.token-prod }}
-        cli-version: ${{ inputs.cli-version }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: false
-
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to staging
-      if: "${{ inputs.cli-version != '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
+      uses: trunk-io/analytics-uploader@gabe/find-previous-exit-code
       with:
         org-slug: trunk-staging-org
         token: ${{ inputs.token-staging }}
@@ -63,153 +48,3 @@ runs:
         quarantine: true
       env:
         TRUNK_PUBLIC_API_ADDRESS: https://api.trunk-staging.io
-
-    - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev
-      if: "${{ inputs.cli-version != '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev }}
-        cli-version: ${{ inputs.cli-version }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev.trunk-staging.io/
-        DISABLE_SENTRY: true
-
-    - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev2
-      if: "${{ inputs.cli-version != '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev2 }}
-        cli-version: ${{ inputs.cli-version }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev2.trunk-staging.io/
-        DISABLE_SENTRY: true
-
-    - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev3
-      if: "${{ inputs.cli-version != '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev3 }}
-        cli-version: ${{ inputs.cli-version }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev3.trunk-staging.io/
-        DISABLE_SENTRY: true
-
-    - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev4
-      if: "${{ inputs.cli-version != '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev4 }}
-        cli-version: ${{ inputs.cli-version }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev4.trunk-staging.io/
-        DISABLE_SENTRY: true
-
-    - name: Upload test results with default CLI version to prod
-      if: "${{ inputs.cli-version == '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk
-        token: ${{ inputs.token-prod }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: false
-
-    - name: Upload test results with default CLI version to staging
-      if: "${{ inputs.cli-version == '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-staging-org
-        token: ${{ inputs.token-staging }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.trunk-staging.io
-
-    - name: Upload test results with default CLI version to dev
-      if: "${{ inputs.cli-version == '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev.trunk-staging.io
-        DISABLE_SENTRY: true
-
-    - name: Upload test results with default CLI version to dev2
-      if: "${{ inputs.cli-version == '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev2 }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev2.trunk-staging.io
-        DISABLE_SENTRY: true
-
-    - name: Upload test results with default CLI version to dev3
-      if: "${{ inputs.cli-version == '' }}"
-      continue-on-error: true
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev3 }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev3.trunk-staging.io
-        DISABLE_SENTRY: true
-
-    # Do not continue-on-error for last upload
-    - name: Upload test results with default CLI version to dev4
-      if: "${{ inputs.cli-version == '' }}"
-      uses: trunk-io/analytics-uploader@main
-      with:
-        org-slug: trunk-io
-        token: ${{ inputs.token-dev4 }}
-        junit-paths: ${{ inputs.junit-paths }}
-        bazel-bep-path: ${{ inputs.bazel-bep-path }}
-        run: ${{ inputs.run }}
-        quarantine: true
-      env:
-        TRUNK_PUBLIC_API_ADDRESS: https://api.dev4.trunk-staging.io
-        DISABLE_SENTRY: true
