--- a/.github/workflows/java-tests.yaml
+++ b/.github/workflows/java-tests.yaml
@@ -1,4 +1,5 @@
 name: Java Tests
+permissions: read-all
 
 on:
   schedule:
@@ -18,7 +19,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
