--- a/.github/workflows/factory.yaml
+++ b/.github/workflows/factory.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   merge-pr:
     runs-on: [self-hosted, macOS]
+    timeout-minutes: 30
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,6 +25,7 @@ jobs:
   create-pr:
     needs: merge-pr
     runs-on: [self-hosted, macOS]
+    timeout-minutes: 30
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
