--- a/.github/workflows/rerun.yaml
+++ b/.github/workflows/rerun.yaml
@@ -7,7 +7,7 @@ on:
         required: true
 jobs:
   rerun:
-    runs-on: public-amd64-small
+    runs-on: ubuntu-latest
     timeout-minutes: 30
 
     steps:
