--- a/.github/actions/analytics-uploader-wrapper-with-variant/action.yaml
+++ b/.github/actions/analytics-uploader-wrapper-with-variant/action.yaml
@@ -42,7 +42,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to prod
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk
         token: ${{ inputs.token-prod }}
@@ -56,7 +56,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to staging
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-staging-org
         token: ${{ inputs.token-staging }}
@@ -72,7 +72,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev }}
@@ -89,7 +89,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev2
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev2 }}
@@ -106,7 +106,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev3
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev3 }}
@@ -123,7 +123,7 @@ runs:
     - name: Upload test results with CLI version ${{ inputs.cli-version }} to dev4
       if: "${{ inputs.cli-version != '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev4 }}
@@ -140,7 +140,7 @@ runs:
     - name: Upload test results with default CLI version to prod
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk
         token: ${{ inputs.token-prod }}
@@ -153,7 +153,7 @@ runs:
     - name: Upload test results with default CLI version to staging
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-staging-org
         token: ${{ inputs.token-staging }}
@@ -168,7 +168,7 @@ runs:
     - name: Upload test results with default CLI version to dev
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev }}
@@ -184,7 +184,7 @@ runs:
     - name: Upload test results with default CLI version to dev2
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev2 }}
@@ -200,7 +200,7 @@ runs:
     - name: Upload test results with default CLI version to dev3
       if: "${{ inputs.cli-version == '' }}"
       continue-on-error: true
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev3 }}
@@ -216,7 +216,7 @@ runs:
     # Do not continue-on-error for last upload
     - name: Upload test results with default CLI version to dev4
       if: "${{ inputs.cli-version == '' }}"
-      uses: trunk-io/analytics-uploader@dylan/refactor-to-use-release-artifacts-directly
+      uses: trunk-io/analytics-uploader@main
       with:
         org-slug: trunk-io
         token: ${{ inputs.token-dev4 }}
